feat: add test coverage to agency datamodel for CentralDataProtectionTemplate